--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  table_calendar: ^2.2.3
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
