--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   table_calendar: ^2.2.3
   intl: ^0.16.1
+  video_player: '>=0.10.11+2 <2.0.0'
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/videos/
 
   fonts:
     - family: Roboto
