refactor: change applicationId

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yoganath">
+    package="com.applab.yoganath">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
