--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   intl: ^0.16.1
   table_calendar: ^2.2.3
   video_player: '>=0.10.11+2 <2.0.0'
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+1
+  firebase_storage: ^4.0.0
 
 dev_dependencies:
   flutter_test:
